[package]
name = "flecs_core_cxx_bridge"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0"
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0"
flecs-core = { path = "../flecs-core", version = "0.1.0" }
flecsd_axum_server = { path = "../flecsd_axum_server", version = "2.0.0" }
flecs_console_client = { path = "../flecs-console-api/flecs_console_client", version = "1.0.0" }
tracing = "0.1"

[build-dependencies]
cxx-build = "1.0"
