[package]
name = "flecsd"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs-core = { path = "../flecs-core", version = "0.1.0" }
tokio = "1.42.0"
tracing = "0.1.41"
async-signal = "0.2.10"
futures-util = "0.3.31"